--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 body {
     background: black;
 }
+
+.cybergrid-color {
+    background-image:
+        linear-gradient(rgba(0, 255, 255, 0.1) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(0, 255, 255, 0.1) 1px, transparent 1px);
+    background-size: "50px 50px";
+}
