--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,8 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: #000;
+    overflow-x: hidden;
+    max-width: 100vw;
 }
 
 /* Custom scrollbar */
